# wordleiscious

./: pyproject.toml
src/wordleiscious/: entropy.py  model.py  outcome.py  value_propagation.py  words.py
src/wordleiscious/data/: weights.json.gzip  word_frequency.feather
test/: outcome.py
